[Password Manager] Fix filling when username is given on page.

On CL https://codereview.chromium.org/2736393003/ it was introduced clearing of passwords except of preferred match before sending to renderer. But in case when the username is given on a page (for example like on account.google.com) not a preferred match but a match that corresponds to the given username should be autofilled. This CL leaves clearing of passwords only in case when passwords should be filled on account select.

Bug: 739870
Change-Id: Id2571c959588c537d9399df1f5c964e4d7c5c2ef
Reviewed-on: https://chromium-review.googlesource.com/626060
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496382}
Former-commit-id: 4e2e8d1b7ed48de0c8ddc096e9daa8c5750f470b