components/autofill/core/common/password_form_fill_data.cc
@@ -89,9 +89,14 @@ void InitPasswordFormFillData(
 }
 
 PasswordFormFillData ClearPasswordValues(const PasswordFormFillData& data) {
+  // In case when there is a username on a page (for example in a hidden field),
+  // credentials from |additional_logins| could be used for filling on load. So
+  // in case of filling on load nor |password_field| nor |additional_logins|
+  // can't be cleared
+  if (!data.wait_for_username)
+    return data;
   PasswordFormFillData result(data);
-  if (result.wait_for_username)
-    result.password_field.value.clear();
+  result.password_field.value.clear();
   for (auto& credentials : result.additional_logins)
     credentials.second.password.clear();
   return result;
